manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aksdemo-6a42"
    labels:
        app: "aksdemo-6a42"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "aksdemo-6a42"
